--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,7 +1,6 @@
 .NavBar {
   display: flex;
   justify-content: center;
-  margin: 0 0 20px;
 }
 
 .NavBar-link {
