--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,6 @@ body {
   font: white; 
   background-image: url('https://i.imgur.com/3jF7B6A.jpg');
   background-size: 100%; 
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-attachment: fixed;  
 }
