--- a/src/pages/MainPage/MainPage.css
+++ b/src/pages/MainPage/MainPage.css
@@ -2,6 +2,10 @@
     text-align: center; 
 }
 
+.formInput {
+    margin-top: 60px; 
+}
+
 input {
     text-align: center; 
 }
